--- a/src/translations/ro.yml
+++ b/src/translations/ro.yml
@@ -1,10 +1,10 @@
-acceptAll: ''
+acceptAll: Acceptă tot
 acceptAll_en: Accept all
-acceptSelected: ''
+acceptSelected: Acceptă selecția
 acceptSelected_en: Accept selected
 service:
     disableAll:
-        description: Utilizați acest switch pentru a activa/dezactiva toate aplicațiile.
+        description: Utilizați acest comutator pentru a activa/dezactiva toate aplicațiile.
         title: Comutați între toate aplicațiile
     optOut:
         description: Această aplicație este încărcată în mod implicit (dar puteți renunța)
@@ -14,14 +14,14 @@ service:
     required:
         description: Această aplicație este întotdeauna necesară
         title: (întotdeauna necesar)
-close: ''
+close: Închide
 close_en: Close
 consentModal:
     description:
         Aici puteți vedea și personaliza informațiile pe care le colectăm despre
         dvs.
     privacyPolicy:
-        name: politica privacy
+        name: politica de confidențialitate
         text: Pentru a afla mai multe, vă rugăm să citiți {privacyPolicy}.
     title: Informațiile pe care le colectăm
 consentNotice:
@@ -32,14 +32,14 @@ consentNotice:
         'Colectăm și procesăm informațiile dvs. personale în următoarele scopuri:
         {purposes}.'
     imprint:
-        name: ''
+        name: Imprint
         name_en: imprint
     learnMore: Află mai multe
     privacyPolicy:
-        name: politica privacy
+        name: politica de confidențialitate
 decline: Renunță
 ok: OK
-poweredBy: Realizat de Klaro!
+poweredBy: Realizat cu Klaro!
 purposeItem:
     service: serviciu
     services: servicii
