--- a/src/translations/ro.yml
+++ b/src/translations/ro.yml
@@ -1,46 +1,61 @@
 acceptAll: Acceptă tot
-acceptAll_en: Accept all
 acceptSelected: Acceptă selecția
-acceptSelected_en: Accept selected
-service:
-    disableAll:
-        description: Utilizați acest comutator pentru a activa/dezactiva toate aplicațiile.
-        title: Comutați între toate aplicațiile
-    optOut:
-        description: Această aplicație este încărcată în mod implicit (dar puteți renunța)
-        title: (opt-out)
-    purpose: Scop
-    purposes: Scopuri
-    required:
-        description: Această aplicație este întotdeauna necesară
-        title: (întotdeauna necesar)
 close: Închide
-close_en: Close
 consentModal:
     description:
-        Aici puteți vedea și personaliza informațiile pe care le colectăm despre
-        dvs.
-    privacyPolicy:
-        name: politica de confidențialitate
-        text: Pentru a afla mai multe, vă rugăm să citiți {privacyPolicy}.
+        Aici puteți vedea și personaliza informațiile pe care le colectăm despre dumneavoastră. Puteți activa sau dezactiva scopurile după cum doriți!
     title: Informațiile pe care le colectăm
 consentNotice:
-    changeDescription:
-        Au existat modificări de la ultima vizită, vă rugăm să actualizați
-        consimțământul.
+    changeDescription: Au apărut schimbări de la ultima ta vizită. Va trebui să actualizezi consimțământul.
+    title: Cookie Consent
     description:
         'Colectăm și procesăm informațiile dvs. personale în următoarele scopuri:
         {purposes}.'
-    imprint:
-        name: Imprint
-        name_en: imprint
-    learnMore: Află mai multe
-    privacyPolicy:
-        name: politica de confidențialitate
-decline: Renunță
-ok: OK
+    learnMore: Actualizează
+    testing: Testing mode!
+contextualConsent:
+    acceptAlways: Mereu
+    acceptOnce: Doar acum
+    description: Vrei să încarci conținutul extern oferit de {title}?
+decline: Refuz
+ok: E ok
 poweredBy: Realizat cu Klaro!
+privacyPolicy:
+    name: politica de confidențialitate
+    text: Pentru mai multe informații, citește {privacyPolicy}.
 purposeItem:
-    service: serviciu
-    services: servicii
+    service: scop
+    services: scopuri
+purposes:
+    advertising:
+        description:
+            Aceste servicii procesează informațiile personale ca să ofere reclame personalizate 
+            furnizate în baza intereselor proprii.
+        title: Advertising
+    functional:
+        description:
+            Aceste servicii sunt esențiale pentru funcționarea corectă al acestui site. Nu le poți dezactiva
+            întrucât site-ul web nu ar mai funcționa corespunzător.
+        title: Service Provision
+    marketing:
+        description:
+            Aceste servicii procesează informațiile personale să-ți ofere conținut relevant
+            despre produse, servicii sau subiecte de care ai putea fi interesat. 
+        title: Marketing
+    performance:
+        description:
+            Aceste servicii procesează informațiile personale să optimizeze serviciile oferite de acest website.
+        title: Optimizări de performanță
 save: Salvează
+service:
+    disableAll:
+        description: Folosește această bifă pentru a activa sau dezactiva toate serviciile.
+        title: Comută între toate serviciile.
+    optOut:
+        description: Acest serviciu este încărcat în mod implicit (dar poți renunța)
+        title: (opt-out)
+    purpose: scop
+    purposes: scopuri
+    required:
+        description: Acest serviciu este necesar.
+        title: (necesar)
